language/tools/move-cli/tests/testsuite/republish/args.exp
Command `publish -v`:
Compiling Move modules...
Found and compiled 2 modules
Publishing a new module 00000000000000000000000000000042::M (wrote 56 bytes)
Publishing a new module 00000000000000000000000000000043::N (wrote 56 bytes)
Wrote 112 bytes of module ID's and code
Command `view storage/0x00000000000000000000000000000042/modules/M.mv`:
module 42.M {



}
Command `view storage/0x00000000000000000000000000000043/modules/N.mv`:
module 43.N {



}
Command `publish -v`:
Compiling Move modules...
Found and compiled 2 modules
Updating an existing module 00000000000000000000000000000042::M (wrote 56 bytes)
Updating an existing module 00000000000000000000000000000043::N (wrote 56 bytes)
Wrote 112 bytes of module ID's and code
Command `view storage/0x00000000000000000000000000000042/modules/M.mv`:
module 42.M {



}
Command `view storage/0x00000000000000000000000000000043/modules/N.mv`:
module 43.N {



}
Command `publish -v --no-republish`:
Compiling Move modules...
error: 

   ┌── build/mv_interfaces/00000000000000000000000000000042/M.move:2:8 ───
   │
 2 │ module M {
   │        ^ Duplicate definition for module '0x42::M'
   │

   ┌── src/M.move:2:8 ───
   │
 2 │ module M {
   │        - Previously defined here
   │

error: 

   ┌── build/mv_interfaces/00000000000000000000000000000043/N.move:2:8 ───
   │
 2 │ module N {
   │        ^ Duplicate definition for module '0x43::N'
   │

   ┌── src/N.move:2:8 ───
   │
 2 │ module N {
   │        - Previously defined here
   │

Command `publish -v --no-republish src/M.move`:
Compiling Move modules...
error: 

   ┌── build/mv_interfaces/00000000000000000000000000000042/M.move:2:8 ───
   │
 2 │ module M {
   │        ^ Duplicate definition for module '0x42::M'
   │

   ┌── src/M.move:2:8 ───
   │
 2 │ module M {
   │        - Previously defined here
   │

